--- a/src/Locale/ja_JP/default.po
+++ b/src/Locale/ja_JP/default.po
@@ -14,6 +14,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 
+msgid "Logout"
+msgstr "ログアウト"
+
 #: Controller/LoginHistorysController.php:57
 #: Controller/LoginHistorysController.php:82
 msgid "The login history has been saved."
